fixed spacing/responsiveness

--- a/css/index.css
+++ b/css/index.css
@@ -398,6 +398,11 @@ header button:hover {
   flex-direction: column;
   align-items: center;
 }
+@media (min-width:1000px) {
+  #home {
+    align-items: flex-start;
+  }
+}
 #home h1 {
   color: whitesmoke;
   text-align: left;
@@ -413,11 +418,9 @@ header button:hover {
 @media (min-width:1000px) {
   #home h1 {
     font-size: 5rem;
-    width: 42%;
     text-align: left;
-    margin-bottom: 100px;
-    padding-left: 50px;
-    margin-top: -200px;
+    margin: auto 50px;
+    width: 50%;
   }
 }
 @media (min-width:600px) {
@@ -435,10 +438,8 @@ header button:hover {
 }
 @media (min-width:1000px) {
   #home p {
-    margin-left: 50px;
     text-align: left;
-    width: 38%;
-    margin-bottom: auto;
+    margin: auto 50px;
   }
 }
 #home #input {
@@ -448,17 +449,7 @@ header button:hover {
 }
 @media (min-width:1000px) {
   #home #input {
-    align-items: center;
-  }
-}
-@media (min-width:1097px) {
-  #home #input {
-    margin-left: 6%;
-  }
-}
-@media (min-width:1499px) {
-  #home #input {
-    margin-left: 14vw;
+    margin: 0 auto;
   }
 }
 #home #input #inputText {
@@ -516,18 +507,6 @@ header button:hover {
   #home #input #join {
     font-size: 2.5rem;
     padding: 0 30px;
-  }
-}
-@media (min-width:1097px) {
-  #home {
-    align-items: start;
-    flex-wrap: wrap;
-  }
-}
-@media (min-width:1000px) {
-  #home {
-    align-items: start;
-    flex-direction: row;
   }
 }
 .aboutApp {
